kubernetes/apps/harvest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: harvest
spec:
  selector:
    app.kubernetes.io/name: harvest
  ports:
    - name: http
      port: 8080
      targetPort: http
